# libnge2

./: .gitignore  CMakeLists.txt  HISTORY.md  INSTALL.md  README.md  Thumbs.db  create-android.sh  down-androiddepends.sh  down-resources.sh  down-win32depends.sh  make-android.sh  make-psp.sh  配置说明.txt
Android/: Android.mk  AndroidManifest.xml.in  project_create.sh.in  strings.xml.in
CMake/: AndroidCommon.cmake  Common.cmake  SetupDepends.cmake
CMake/Templates/: merge_archives_unix.cmake.in
CMake/Utils/: CopyFile.cmake  DupLibs.cmake  LibUtils.cmake  LogFeature.cmake  PkgUtils.cmake  RmDupLibs.cmake  android.toolchain.cmake  psp.toolchain.cmake  psptoolchain.cmake
Xcoder/: downloadUrl.txt
Xcoder/Libnge2.xcodeproj/: project.pbxproj
and_jni_base/: nge_android_jni.c  nge_android_jni.h
android/jni/: Android.mk  audio_android.c
app/: CMakeLists.txt  nge_app.cpp  nge_app.h
cmake/: Common.cmake  Psptools.cmake  psptoolchain.cmake
coolaudio/: Android.mk  CMakeLists.txt  LSAudioDeleCall.h  LSAudioDeleCall.m  LibCoolAudio.java  Makefile_lib  RawAudio.java  SoundpoolManager.java  android_log.h  android_mediaplayer.c  android_mediaplayer.h  android_rawaudio.c  android_rawaudio.h  android_soundpool.c  android_soundpool.h  android_wav.c  android_wav.h  audio_android.c  audio_android.h  audio_codec.cpp  audio_interface.h  audio_openal.cpp  audio_openal.h  audio_openal_wav.c  audio_parser.h  create-android.sh  jni_android.c  libLSAudio.m  libcoolaudio.c  nge_audio.cpp  nge_audio_linux.c  nge_audio_psp.cpp  nge_io_mem.c  nge_io_mem.h  wav.c  wav.h
coolaudio/codecs/: mp3_codec.cpp  mp3_codec.h
coolaudio/common/: buffered_reader.h  mem64.c  mem64.h
coolaudio/parsers/: mp3_parser.h  musepack_parser.h  oggvorbis_parser.h  pcm_parser.cpp  pcm_parser.h
dirent/: CMakeLists.txt  directory.c  directory.h  nge_ch_io_dir.h  nge_dirent.cpp  nge_dirent.hpp
doc/: nge2_Doxyfile
helper/: CMakeLists.txt  CppSQLite3.cpp  CppSQLite3.h  dictionary.c  dictionary.h  iniparser.c  iniparser.h  package.cpp  package.h
hge/: CMakeLists.txt  hgecolor.cpp  hgecolor.h  hgedistort.cpp  hgeparticle.cpp  hgeparticle.h  hgepmanager.cpp  hgerect.cpp  hgerect.h  hgevector.cpp  hgevector.h
include/: audio_interface.h  jni_android.h  libnge2.h  libnge2pure.h  nge.h  nge_app.h  nge_app.hpp  nge_bmp.h  nge_ch_io_dir.h  nge_charsets.h  nge_color.h  nge_common.h  nge_debug_log.h  nge_define.h  nge_dll_export.h  nge_endian_internal.h  nge_font.h  nge_font_internal.h  nge_gif.h  nge_gif_animation.h  nge_gif_show.h  nge_graphics.h  nge_graphics_ext.h  nge_image.h  nge_image_effect.h  nge_image_ext.h  nge_image_load.h  nge_input.h  nge_input_proc.h  nge_io_dir.h  nge_io_file.h  nge_io_file_internal.h  nge_jpg.h  nge_main.h  nge_misc.h  nge_mmgr.h  nge_package.h  nge_package_internal.h  nge_package_zip.h  nge_platform.h  (+12 more)
include/charsets/: ascii.h  gbkext_inv.h  utf8.h
include/debug/: mmgr.h
include/helper/: CppSQLite3.h  dictionary.h  nge_effect.h
include/hge/: hgedistort.h  hgeparticle.h  hgerect.h
include/movie/: nge_movie.h
include/msvc/: stdint.h
include/net/: event.h
include/psp/: nge_vram.h
jni/: Android.mk  audio_android.cpp
mmgr/: CMakeLists.txt  mmgr.cpp  mmgr.h  nommgr.h
movie/: CMakeLists.txt  nge_movie.c  nge_movie.h
net/: CMakeLists.txt  config.h  event.c  event.h  log.c  nge_net_common.c  nge_net_common.h  select.c
particle-conv/: CMakeLists.txt  main.cpp  ncmake.bat
samples/: CMakeLists.txt
samples/demo0/: Makefile  ncmake.bat  test.cpp
samples/demo1/: CMakeLists.txt  Makefile  ncmake.bat  test.cpp
samples/demo10/: CMakeLists.txt  test.cpp
samples/demo11/: CMakeLists.txt  test.cpp
samples/demo12/: CMakeLists.txt  cAnimation.cpp  test.cpp
samples/demo13/: CMakeLists.txt  test.cpp
samples/demo14/: CMakeLists.txt  test.cpp
samples/demo15/: CMakeLists.txt  ncmake.bat  test.cpp
samples/demo16/: test.cpp
samples/demo17/: test.cpp
samples/demo2/: CMakeLists.txt  Makefile  ncmake.bat  test.cpp
samples/demo3/: CMakeLists.txt  Makefile  ncmake.bat  test.cpp
samples/demo4/: Makefile  cAnimation.cpp  cAnimation.h  ncmake.bat  test.cpp
samples/demo5/: CMakeLists.txt  Makefile  test.cpp
samples/demo6/: CMakeLists.txt  Makefile  ncmake.bat  test.cpp
samples/demo7/: CMakeLists.txt  Makefile  ncmake.bat  test.cpp
samples/demo8/: Makefile  ncmake.bat  test.cpp
samples/demo9/: CMakeLists.txt  Makefile  test.cpp
samples/unzip_test/: Makefile  test.cpp  说明.txt
script/: down-androiddepends.sh  down-resources.sh  down-win32depends.sh  make-linux.sh  pack-res.sh  replace.sh
src/: Makefile  cp936ext.h  gb2312.h  gbk.h  gbkext2.h  libnge2.c  nge.c  nge_app.c  nge_app.cpp  nge_app_cpp.cpp  nge_bmp.c  nge_ch_io_dir.cpp  nge_charsets.c  nge_debug_log.c  nge_font.c  nge_font_bittype.h  nge_font_freetype.c  nge_font_hzk.c  nge_font_nfont.c  nge_gif_animation.c  nge_gif_show.c  nge_graphics.c  nge_graphics_ext.c  nge_graphics_iphone.c  nge_graphics_psp.c  nge_graphics_win.c  nge_image.c  nge_image_effect.c  nge_image_ext.c  nge_image_load.c  nge_input.c  nge_input_proc.c  nge_io_dir.c  nge_io_file.c  nge_jpg.c  nge_main.c  nge_misc.c  nge_movie.c  nge_package.c  nge_package_zip.c  (+10 more)
src/android/: NGE2.java  UnZipFile.java  UnZipFile.java.in  UtilsKit.java  nge_jni.cpp  nge_utilskit.c
src/audiosystem/: interface.h  libcoolaudio.c  play_mp3.h  play_mp3_psp.c  play_mp3_win.c  play_ogg.h  play_ogg_psp.c  play_ogg_win.c  play_pcm.h  play_pcm_psp.c  play_pcm_win.c
src/charsets/: ces_gbk.h  gbk.h  gbkext1.h
src/debug/: mmgr.cpp  mmgr.h  nommgr.h
src/directory/: fat.c  miniconv.h
src/effect/: ._nge_image_effect.c  nge_image_effect.c  nge_image_effect.h
src/helper/: dictionary.c  nge_effect.cpp
src/hge/: hgeparticle.cpp  hgeparticle.h  hgerect.h
src/libcoolaudio/: audio_codec.cpp  audio_codec.h  audio_interface.h  audio_parser.h  nge_audio_psp.cpp  nge_io_mem.h  readme.txt
src/libcoolaudio_win32/: AudioType.h  DSoundObject.h  TopAudioBuilder.h  libcoolaudio.cpp  player_audio.cpp  win32_audio_builder.h
src/movieplay/: nge_movie.c  nge_movie.h
(+28 files in other folders)
